WIP: tweaks to listing detail page style - Fixed RWD layout bug in listing detail. - Created round mixin

--- a/app/assets/stylesheets/base/_variables.css.scss
+++ b/app/assets/stylesheets/base/_variables.css.scss
@@ -1,9 +1,10 @@
-$xs-screen: 20em;
-$small-screen: 30em;
-$medium-screen: 42em;
-$tablet-screen: 48em;
-$large-screen: 90em;
+$xs-screen: 20em;//320px
+$small-screen: 30em;//480px
+$medium-screen: 42em;//672px
+$tablet-screen: 48em;//768px
+$large-screen: 90em;//1440
 $em-base: 18 !default;
 $base-font: "Dosis";
 $alt-font: "Quicksand";
 $radius: .25em;
+$round: 100em;
